--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Python: Module",
       "type": "python",
       "request": "launch",
-      "module": "snytch",
+      "module": "ludvig",
       "justMyCode": true,
       "args": ["sample:latest"]
     }
