read from filesystem in binary format to properly allow yara to detect. refactored project structure. added source code sample.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "module": "ludvig",
       "justMyCode": true,
-      "args": ["fs", "."]
+      "args": ["fs", "./samples/dotnet"]
     }
   ]
 }
