changed naming convention of rules and added a test of entropy scanning

--- a/samples/container/appsettings.json
+++ b/samples/container/appsettings.json
@@ -1,5 +1,5 @@
 {
 	"clientId": "1234-1234-1234",
-	"secret": "a0932fdsdv",
+	"clientSecret": "4x.8Q~lOlyHhczTcXIolJJ8YLHPd--4fMOaNaaK9",
 	"aws_key": "QVNJQVczTlZLTElKVEFSR0ZSR04="
 }
