--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "module": "ludvig",
       "justMyCode": true,
-      "args": ["fs", "/home/frode/src/github.com/easee/access-control-keycloak"]
+      "args": ["image", "sample:latest"]
     }
   ]
 }
