maybe checkout repo before running action

--- a/.github/workflows/ludvig.yml
+++ b/.github/workflows/ludvig.yml
@@ -6,6 +6,8 @@ jobs:
   ludvig:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3    
     - name: Run Ludvig from local definition
       uses: ./
   
