--- a/.github/workflows/ludvig.yml
+++ b/.github/workflows/ludvig.yml
@@ -10,4 +10,7 @@ jobs:
       uses: actions/checkout@v3    
     - name: Run Ludvig from local definition
       uses: ./
+      with:
+        path:
+          samples/dotnet
   
