--- a/.github/workflows/ludvig.yml
+++ b/.github/workflows/ludvig.yml
@@ -21,5 +21,5 @@ jobs:
         path:
           '${{ github.event.inputs.path }}'
         customRulesPath:
-          '${{ github.event.inputs.path }}'
+          '${{ github.event.inputs.customRulesPath }}'
   
