--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,21 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python: Module",
+      "name": "Python: Image scan",
       "type": "python",
       "request": "launch",
       "module": "ludvig",
       "justMyCode": true,
-      "args": ["image", "scan", "--repository", "sample:latest", "--output-sarif", "test.json"]
+      "args": ["image", "scan", "--repository", "sample:latest"]
+    },
+    {
+      "name": "Python: Filesystem scan",
+      "type": "python",
+      "request": "launch",
+      "module": "ludvig",
+      "justMyCode": true,
+      "args": ["fs", "scan", "--path", "samples/dotnet"]
     }
+
   ]
 }
