--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
       "request": "launch",
       "module": "ludvig",
       "justMyCode": true,
-      "args": ["fs", "scan", "--path", "samples/dotnet"]
+      "args": ["fs", "scan", "--path", "samples/container"]
     }
 
   ]
