added workaround for knack to return exit code if positive scan results are present

--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,7 @@ outputs:
     description: 'Scan results'
 runs:
   using: 'docker'
-  image: 'docker://reothor/ludvig:latest'
+  image: 'docker://reothor/ludvig:0.2'
   args:
     - '-c ${{ inputs.customRulesPath }}'
     - '-p ${{ inputs.path }}'
