--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,17 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+    'cyclonedx-python-lib == 3.1.5',
+    'packageurl-python==0.10.4',
+    'requests==2.28.2',
+    'yara-python==4.2.3',
+    'knack==0.10.1',
+    'jschema_to_python==1.2.3',
+    'sarif_om==1.0.4',
+    'urllib3==1.26.14'
+]
+
 
 [project.scripts]
 ludvig = "ludvig.__main__:main"
