--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
-black==22.12.0
+argcomplete==2.0.0
+attrs==22.2.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
-click==8.1.3
-commonmark==0.9.1
 cyclonedx-python-lib==3.1.5
 idna==3.4
-mypy-extensions==0.4.3
+jmespath==1.0.1
+jschema-to-python==1.2.3
+jsonpickle==3.0.1
+knack==0.10.1
 packageurl-python==0.10.4
-pathspec==0.10.3
-platformdirs==2.6.2
+pbr==5.11.1
 Pygments==2.14.0
-rich==13.2.0
+PyYAML==6.0
 requests==2.28.2
+sarif-om==1.0.4
 sortedcontainers==2.4.0
+tabulate==0.9.0
 toml==0.10.2
-tomli==2.0.1
 urllib3==1.26.14
 yara-python==4.2.3
-knack==0.10.1
-jschema_to_python==1.2.3
-sarif_om==1.0.4
