--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,17 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+    'cyclonedx-python-lib == 3.1.5',
+    'packageurl-python==0.10.4',
+    'requests==2.28.2',
+    'yara-python==4.2.3',
+    'knack==0.10.1',
+    'jschema_to_python==1.2.3',
+    'sarif_om==1.0.4',
+    'urllib3==1.26.14'
+]
+
 
 [project.scripts]
 ludvig = "ludvig.__main__:main"
@@ -22,3 +33,8 @@ ludvig = "ludvig.__main__:main"
 [project.urls]
 "Homepage" = "https://github.com/frodehus/ludvig"
 "Bug Tracker" = "https://github.com/frodehus/ludvig/issues"
+
+[tool.black]
+line-length = 88
+target-version = ['py39']
+include = '\.pyi?$'
