added functionality to load yara rules from url and store as compiled rules locally

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,14 @@
       "module": "ludvig",
       "justMyCode": true,
       "args": ["fs", "scan", "--path", "samples/container", "-otable"]
+    },
+    {
+      "name": "Python: Download rules",
+      "type": "python",
+      "request": "launch",
+      "module": "ludvig",
+      "justMyCode": true,
+      "args": ["rules", "download"]
     }
-
   ]
 }
