added some tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,14 @@
       "args": ["fs", "scan", "--path", ".", "-otable"]
     },
     {
+      "name": "Python: Git history scan",
+      "type": "python",
+      "request": "launch",
+      "module": "ludvig",
+      "justMyCode": true,
+      "args": ["git", "scan", "--path", ".", "-otable"]
+    },
+    {
       "name": "Python: Download rules",
       "type": "python",
       "request": "launch",
