2 GitHub history scanning feature (#48)
* added support for scanning Git pack files (no loose objects support yet)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,15 @@
       "request": "launch",
       "module": "ludvig",
       "justMyCode": true,
-      "args": ["fs", "scan", "--path", "samples/container", "-otable"]
+      "args": ["fs", "scan", "--path", ".", "-otable"]
+    },
+    {
+      "name": "Python: Git history scan",
+      "type": "python",
+      "request": "launch",
+      "module": "ludvig",
+      "justMyCode": true,
+      "args": ["git", "scan", "--path", ".", "-otable"]
     },
     {
       "name": "Python: Download rules",
