--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     'jschema_to_python==1.2.3',
     'sarif_om==1.0.4',
     'urllib3==1.26.14',
+    'python-dateutil==2.8.1',
 ]
 
 
