added vulndb source config and database build from scratch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,18 +37,12 @@
       "args": ["rules", "download"]
     },
     {
-      "name": "Python: Parse OSV advisories",
+      "name": "Python: VulnDb build",
       "type": "python",
       "request": "launch",
       "module": "ludvig",
       "justMyCode": true,
-      "args": [
-        "vulndb",
-        "add",
-        "osv",
-        "--path",
-        "/home/frode/src/github.com/github/advisory-database/advisories"
-      ]
+      "args": ["vulndb", "build"]
     }
   ]
 }
