--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Ludvig by Reothor
-        uses: FrodeHus/ludvig-action@v0.6.0
+        uses: FrodeHus/ludvig-action@v0.6.1
         with:
-          path: ludvig
+          path: ./ludvig
           sarifFileName: ludvig.sarif
       - name: Upload Ludvig scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
