--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "ludvig"
-version = "0.7.2"
+version = "0.8.0"
 authors = [{ name = "Frode Hus", email = "frode@frodehus.dev" }]
 description = "A simple vulnerability scanner"
 readme = "README.md"
@@ -24,6 +24,7 @@ dependencies = [
     'sarif_om==1.0.4',
     'urllib3==1.26.14',
     'python-dateutil==2.8.2',
+    'defusedxml==0.7.1',
 ]
 
 
@@ -40,7 +41,7 @@ line-length = 88
 target-version = ['py39']
 include = '\.pyi?$'
 [tool.bumpver]
-current_version = "0.7.2"
+current_version = "0.8.0"
 version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
 commit_message = "bump version {old_version} -> {new_version}"
 commit = true
